remoção de classe css não utilizada.

--- a/views/index.html
+++ b/views/index.html
@@ -7,8 +7,8 @@
 				<div class="panel-heading"><h1>QR Code - PHP</h1></div>
 				<div class="panel-body">
 					{% if img %}
-						<div class="form-group">
-							<img src="img/{{img}}">
+						<div class="form-group text-center">
+                            <img src="img/{{img}}">
 						</div>
 					{% endif %}
 	                <form action="/" method="POST">
