--- a/views/layout.html
+++ b/views/layout.html
@@ -3,12 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>QR Code - PHP</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <style type="text/css">
-        body{
-            margin-top: 2%;
-        }
-    </style>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
     <div class='container'>
